feat.: npm name chaning

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hydra",
+  "name": "@keltoi/hydra",
   "version": "1.0.0",
   "description": "Boilerplate to start your API from zero using Repository Pattern",
   "main": "index.js",
